test/expected/declare_hll.out
declare x as short long long
        ^
9: error: "short long long int" is illegal for built-in type
